--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -7,7 +7,11 @@
 // @import (inline) "../css/font-awesome.css";
 // @import (inline) "../css/animate.css";
 
-@import url('https://fonts.googleapis.com/css?family=Kelly+Slab');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:300');
 
 @import "scaffolding.less";
+
+@import "blocks/home-header.less";
+@import "blocks/steps.less";
+@import "blocks/partners.less";
+@import "blocks/discover.less";
