--- a/assets/less/scaffolding.less
+++ b/assets/less/scaffolding.less
@@ -5,39 +5,38 @@
 }
 
 body {
-	font-size: 18px;
-	line-height: 22px;
-	font-family: 'OpenSans', sans-serif;
-	color: #000;
-	font-style: 400;
+	font-size: 14px;
+	line-height: auto;
+	font-family: 'Roboto', sans-serif;
+	color: #666666;
+	font-style: 300;
 	background-color: #fff;
 }
 
 h1 {
-	font-family: 'Kelly Slab', cursive;
-	font-size: 36px;
-	line-height: 70px;
-	font-style: 300;
-
+	font-family: 'Montserrat', sans-serif;
+	font-size: 52px;
+	line-height: auto;
+	font-style: 700;
+	color: #fff;
 	text-transform: uppercase;
 }
 
 h2 {
-	font-family: 'Kelly Slab', cursive;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 22px;
-	line-height: 12px;
-	font-style: 300;
-	color:#333;
-
-	text-transform: uppercase;
+	line-height: auto;
+	font-style: 700;
+	color: #000;
 }
 
 h3 {
-	font-size: 22px;
-	line-height: 125px;
-	font-style: 400;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 14px;
+	line-height: auto;
+	font-style: 700;
+	color: #000;
 }
-
 
 img {
 	max-width: 100%;
@@ -45,8 +44,9 @@ img {
 }
 
 a {
+	display: inline-block;
 	text-decoration: none;
-	color: #000;	
+	color: #666;	
 }
 
 .visually-hidden {
@@ -62,37 +62,48 @@ a {
 
 
 .btn {
-	font-weight: 700;
-	text-transform: uppercase;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 14px;
+	line-height: auto;
+	font-style: 700;
+	color: #fff;
+
 	text-decoration: none;
 	text-align: center;
-	color: #fff;
-	background-color: #212121;
+	background-color: #ff4e50;
 
-	border: 1px solid rgba(0,0,0, 0.2);
+	border-radius: 23px;
+	border: 2px solid #ff4e50;
 
-	padding: 18px 30px;
-	box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
-	outline: 1px solid;
-	outline-color: rgba(255, 255, 255, .5);
-	outline-offset: 0px;
+	padding: 10px 20px;
 	transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
 
 	&:hover {
-		border: 1px solid #ccc;
-		text-decoration: none;
-		color: #333;
+		color: #ff4e50;
 		background-color: #fff;
-		border: 1px solid;
-		box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
-		outline-color: rgba(255, 255, 255, 0);
-		outline-offset: 15px;
+		border: 2px solid #ff4e50;
 	}
 
 	&:active {
-		background-color: #ddd;
-		text-decoration: none;
-		border: 1px solid #aaa;
 		color: #000;
+	}
+}
+
+@media @m-width-only {
+
+	body {
+		font-size: 14px;
+	}
+
+	h1 {
+		font-size: 30px;
+	}
+
+	h2 {
+		font-size: 22px;
+	}
+
+	h3 {
+		font-size: 14px;
 	}
 }
