--- a/assets/less/blocks/discover.less
+++ b/assets/less/blocks/discover.less
@@ -20,11 +20,19 @@
 	border-radius: 3px;
 	width: 100%;
 	height: 120px;
-	background-color: #aaa;
 
 	h2 {
 		color: #fff;
+		padding: 10px;
 	}
+
+	&:nth-child(1) {background: #aaa url(../img/1.jpg) no-repeat center center; background-size: cover;}
+	&:nth-child(2) {background: #aaa url(../img/2.jpg) no-repeat center 40%; background-size: cover;}
+	&:nth-child(3) {background: #aaa url(../img/3.jpg) no-repeat center 20%; background-size: cover;}
+	&:nth-child(4) {background: #aaa url(../img/4.jpg) no-repeat center center; background-size: cover;}
+	&:nth-child(5) {background: #aaa url(../img/5.jpg) no-repeat center top; background-size: cover;}
+	&:nth-child(6) {background: #aaa url(../img/6.jpg) no-repeat center center; background-size: cover;}
+	&:nth-child(7) {background: #aaa url(../img/7.jpg) no-repeat center center; background-size: cover;}
 }
 
 @media @t-width {
@@ -43,7 +51,7 @@
 	}
 
 	.discover__item {
-
+		cursor: pointer;
 		height: 310px;
 
 		&:nth-child(5){
