--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -15,3 +15,5 @@
 @import "blocks/steps.less";
 @import "blocks/partners.less";
 @import "blocks/discover.less";
+@import "blocks/search.less";
+@import "blocks/page-footer.less";
