--- a/assets/less/blocks/steps.less
+++ b/assets/less/blocks/steps.less
@@ -18,10 +18,7 @@
 	height: 240px;
 
 	border-radius: 5px;
-
-	&:nth-child(1) {background: #aaa url('../img/step1.jpg') no-repeat center 80%;background-size: cover}
-	&:nth-child(2) {background: #aaa url('../img/step2.jpg') no-repeat center 80%;background-size: cover}
-	&:nth-child(3) {background: #aaa url('../img/step3.jpg') no-repeat center 50%;background-size: cover}
+	background-color: #aaa;
 }
 
 .steps__count {
@@ -46,7 +43,7 @@
 }
 
 .steps__info {
-	color: #ddd;
+	color: #eee;
 }
 
 @media @t-width {
