--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1,13 +1,12 @@
 @import "variables.less";
 @import "mixins.less";
+@import "fonts.less";
 
 //boostrap grid system & normalize 
 @import (inline) "../css/normalize.css";
 // @import (inline) "../css/bootstrap.css";
 // @import (inline) "../css/font-awesome.css";
 // @import (inline) "../css/animate.css";
-
-@import url('https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:300');
 
 @import "scaffolding.less";
 
